# nrf-mantra-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  mantra.toml  requirements.md
.cargo/: config.toml
.embedded/: openocd.cfg  runner.toml
tests/: trace.rs
