[package]
name = "nrf-mantra-demo"
version = "0.1.0"
edition = "2024"

[[test]]
name = "trace"
harness = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
defmt = "1.0"
defmt-rtt = "1.0" 
defmt-test = "0.4.0"
embedded-hal = "1.0"
hal = { package = "nrf52840-hal", version = "0.18.0" }
mantra-rust-macros = { version = "0.7.0", features = ["defmt"] }
panic-probe = "1.0.0"
